--- a/contact.html
+++ b/contact.html
@@ -216,12 +216,12 @@
     </div>
     <div class="row">
       <div class="col-lg-7 mb-4 mb-lg-0">
-        <form action="/contact.html" method="POST">
+        <form action="mailer.php" method="POST">
           <input type="text" class="form-control mb-3" id="name" name="name" placeholder="Your Name" required>
           <input type="email" class="form-control mb-3" id="mail" name="mail" placeholder="Your Email" required>
           <input type="text" class="form-control mb-3" id="subject" name="subject" placeholder="Subject" required>
           <textarea name="message" id="message" class="form-control mb-3" placeholder="Your Message" required></textarea>
-          <button type="submit" value="send" class="btn btn-primary">SEND MESSAGE</button>
+          <button type="submit" name="send_gmail" value="send" class="btn btn-primary">Send Message</button>
         </form>
       </div>
       <div class="col-lg-5">
