--- a/about.html
+++ b/about.html
@@ -420,5 +420,9 @@
 <!-- Main Script -->
 <script src="js/script.js"></script>
 
+<!-- Start of HubSpot Embed Code -->
+  <script type="text/javascript" id="hs-script-loader" async defer src="//js-na1.hs-scripts.com/22675730.js"></script>
+<!-- End of HubSpot Embed Code -->
+
 </body>
 </html>
