--- a/contact.html
+++ b/contact.html
@@ -216,13 +216,15 @@
     </div>
     <div class="row">
       <div class="col-lg-7 mb-4 mb-lg-0">
-        <form action="mailer.php" method="POST">
-          <input type="text" class="form-control mb-3" id="name" name="name" placeholder="Your Name" required>
-          <input type="email" class="form-control mb-3" id="mail" name="mail" placeholder="Your Email" required>
-          <input type="text" class="form-control mb-3" id="subject" name="subject" placeholder="Subject" required>
-          <textarea name="message" id="message" class="form-control mb-3" placeholder="Your Message" required></textarea>
-          <button type="submit" name="send_gmail" value="send" class="btn btn-primary">Send Message</button>
-        </form>
+        <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2.js"></script>
+          <script>
+            hbspt.forms.create({
+              region: "na1",
+              portalId: "22675730",
+              formId: "36af936b-591b-4a76-80cc-dabfa7d25f8e",
+              version: "V2_PRERELEASE"
+            });
+          </script>
       </div>
       <div class="col-lg-5">
         <div class="row">
@@ -357,6 +359,10 @@
 
 <!-- Main Script -->
 <script src="js/script.js"></script>
+
+<!-- Start of HubSpot Embed Code -->
+  <script type="text/javascript" id="hs-script-loader" async defer src="//js-na1.hs-scripts.com/22675730.js"></script>
+<!-- End of HubSpot Embed Code -->
 
 </body>
 </html>
