--- a/estimate.html
+++ b/estimate.html
@@ -46,13 +46,18 @@
       <div class="row no-gutters">
         <div class="col-lg-4 text-center text-lg-left">
           <a class="text-color mr-3" href="tel:+(856) 786-4888"><strong>CALL</strong>(856) 786-4888</a>
+          
         </div>
         <div class="col-lg-8 text-center text-lg-right">
-          <ul class="list-inline">
-            <li class="list-inline-item mx-0"><a class="d-inline-block p-2 text-color" href="https://facebook.com"><i class="ti-facebook"></i></a></li>
-            <li class="list-inline-item mx-0"><a class="d-inline-block p-2 text-color" href="https://twitter.com"><i class="ti-twitter-alt"></i></a></li>
-            <li class="list-inline-item mx-0"><a class="d-inline-block p-2 text-color" href="https://github.com"><i class="ti-github"></i></a></li>
-            <li class="list-inline-item mx-0"><a class="d-inline-block p-2 text-color" href="https://instagram.com"><i class="ti-instagram"></i></a></li>
+          <!-- <ul class="list-inline">
+            <li class="list-inline-item"><a class="text-uppercase text-color p-sm-2 py-2 px-0 d-inline-block" href="#loginModal" data-toggle="modal" data-target="#loginModal">login</a></li>
+            <li class="list-inline-item"><a class="text-uppercase text-color p-sm-2 py-2 px-0 d-inline-block" href="#signupModal" data-toggle="modal" data-target="#signupModal">register</a></li>
+          </ul> -->
+          <ul class="list-inline d-inline">
+            <li class="list-inline-item mx-0"><a class="d-inline-block p-2 text-color" href="https://facebook.com/"><i class="ti-facebook"></i></a></li>
+            <li class="list-inline-item mx-0"><a class="d-inline-block p-2 text-color" href="https://twitter.com/"><i class="ti-twitter-alt"></i></a></li>
+            <li class="list-inline-item mx-0"><a class="d-inline-block p-2 text-color" href="https://github.com/"><i class="ti-github"></i></a></li>
+            <li class="list-inline-item mx-0"><a class="d-inline-block p-2 text-color" href="https://instagram.com/"><i class="ti-instagram"></i></a></li>
           </ul>
         </div>
       </div>
@@ -114,9 +119,9 @@
               <a class="nav-link" href="gallery.html">Gallery</a>
             </li>
             <li class="nav-item @@freeestimate">
-              <a class="nav-link" href="estimate.html">FreeEstimate</a>
+              <a class="nav-link active" href="estimate.html">FreeEstimate</a>
             </li>
-            <li class="nav-item @@contact">
+            <li class="nav-item">
               <a class="nav-link" href="contact.html">CONTACT</a>
             </li>
           </ul>
@@ -197,7 +202,7 @@
       <div class="col-md-8">
         <ul class="list-inline custom-breadcrumb mb-2">
           <li class="list-inline-item"><a class="h2 text-primary font-secondary" href="index.html">Home</a></li>
-          <li class="list-inline-item text-white h3 font-secondary nasted">Boat &amp; Yacht</li>
+          <li class="list-inline-item text-white h3 font-secondary nasted">Free Estimate</li>
         </ul>
       </div>
     </div>
@@ -205,76 +210,38 @@
 </section>
 <!-- /page title -->
 
-<!-- courses -->
-<section class="section">
+<!-- contact -->
+<section class="section bg-gray">
   <div class="container">
-    <!-- course list -->
-<div class="row justify-content-center">
-  <div class="col-lg-12 col-sm-12 mb-5">
-    <p>Absolute Marble and Granite designs, fabricates and installs any type of stone product for bars, restaurants, night clubs, and more. Our commercial division has installed 1,000′s of granite, marble, quartz, recycled glass and tile projects at locations in Philadelphia, NYC, Pennsylvania, New Jersey, Maryland and Delaware. We pride ourselves on offering the latest and greatest in material choices in addition to professional and timely installation.</p>
-  </div>
-  <!-- course item -->
-  <div class="col-lg-4 col-sm-6 mb-5">
-    <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/restaurant/1.jpg" alt="course thumb">
-      <!-- <div class="card-body">
-        <a href="product.html">
-          <h4 class="card-title">Bianco Venatino</h4>
-        </a>
-      </div> -->
+    <div class="row">
+      <div class="col-lg-12">
+        <h2 class="section-title">Free Estimate</h2>
+      </div>
     </div>
-  </div>
-  <!-- course item -->
-  <div class="col-lg-4 col-sm-6 mb-5">
-    <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/restaurant/2.jpg" alt="course thumb">
+    <div class="row">
+      <div class="col-lg-6 mb-4 mb-lg-0">
+      <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2.js"></script>
+        <script>
+          hbspt.forms.create({
+            region: "na1",
+            portalId: "22675730",
+            formId: "15c02c7f-9af4-4cab-93cb-67dc5899a162",
+            version: "V2_PRERELEASE"
+          });
+        </script>
+      </div>
+      <div class="col-lg-6">
+         <img src="images/estimate.jpg" alt="estimate_image" width="500" height="400">
+         <br><br>
+         <p>Get Started on your dream kitchen or bathroom.</p>
+         <p>We will measure your room, discuss design ideas and help you select products. We provide this service <strong>absolutely free</strong> of charge with no obligation, so you have nothing to lose and everything to learn!.</p>
+         
+      </div>
     </div>
-  </div>
-  <!-- course item -->
-  <div class="col-lg-4 col-sm-6 mb-5">
-    <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/restaurant/3.jpg" alt="course thumb">
-    </div>
-  </div>
-   <!-- course item -->
-   <div class="col-lg-4 col-sm-6 mb-5">
-    <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/restaurant/4.jpg" alt="course thumb">
-    </div>
-  </div>
-   <!-- course item -->
-   <div class="col-lg-4 col-sm-6 mb-5">
-    <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/restaurant/5.jpg" alt="course thumb">
-    </div>
-  </div>
-   <!-- course item -->
-   <div class="col-lg-4 col-sm-6 mb-5">
-    <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/restaurant/6.jpg" alt="course thumb">
-    </div>
-  </div>
-  <!-- course item -->
-  <div class="col-lg-4 col-sm-6 mb-5">
-    <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/restaurant/7.jpg" alt="course thumb">
-    </div>
-  </div>
-  <!-- course item -->
-  <div class="col-lg-4 col-sm-6 mb-5">
-    <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/restaurant/8.jpg" alt="course thumb">
-    </div>
-  </div>
-  <!-- course item -->
-  <div class="col-lg-4 col-sm-6 mb-5">
-    <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/restaurant/9.jpg" alt="course thumb">
-    </div>
-  </div>
   </div>
 </section>
-<!-- /courses -->
+<!-- /contact -->
+<br>
 
 <!-- footer -->
 <footer>
@@ -388,15 +355,6 @@
 <!-- Start of HubSpot Embed Code -->
   <script type="text/javascript" id="hs-script-loader" async defer src="//js-na1.hs-scripts.com/22675730.js"></script>
 <!-- End of HubSpot Embed Code -->
-
-<style>
-  img {
-  transition: transform .7s ease-in-out;
-}
-img:hover {
-  transform: scale(1.5);
-}
-</style>
 
 </body>
 </html>
