--- a/fireplace.html
+++ b/fireplace.html
@@ -113,6 +113,9 @@
             <li class="nav-item @@gallery">
               <a class="nav-link" href="gallery.html">Gallery</a>
             </li>
+            <li class="nav-item @@freeestimate">
+              <a class="nav-link" href="estimate.html">FreeEstimate</a>
+            </li>
             <li class="nav-item @@contact">
               <a class="nav-link" href="contact.html">CONTACT</a>
             </li>
