--- a/gallery.html
+++ b/gallery.html
@@ -117,6 +117,9 @@
             <li class="nav-item active">
               <a class="nav-link" href="gallery.html">Gallery</a>
             </li>
+            <li class="nav-item @@freeestimate">
+              <a class="nav-link" href="estimate.html">FreeEstimate</a>
+            </li>
             <li class="nav-item @@contact">
               <a class="nav-link" href="contact.html">CONTACT</a>
             </li>
