--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
                 </li>
               </ul>
             </li> -->
+            <li class="nav-item @@freeestimate">
+              <a class="nav-link" href="estimate.html">FreeEstimate</a>
+            </li>
             <li class="nav-item @@contact">
               <a class="nav-link" href="contact.html">CONTACT</a>
             </li>
